tests/errors/sem.invalid-name.directive-call.or
main :: () -> void {
    @asdasdasd(100, 100);
};
